# QtPlayground

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: Apple.cmake  FindSpdlog.cmake  Globals.cmake  MSVC.cmake  UseQt.cmake
CMake/platform/mac/: FindQtImport.cmake
CMake/platform/win/: FindQtImport.cmake
CMake/spdlog/: README.md
MainApplication/: CMakeLists.txt  MainApplication.rc  MainApplicationEntitlements_Debug.plisttmpl  MainApplicationEntitlements_Release.plisttmpl  MainApplicationInfo.plisttmpl  RCa18268  Resources.qrc
MainApplication/include/: LoggerMainApplication.h  MainWindow.h  OpenGlWidget.h  pch.h  resource.h
MainApplication/resources/shaders/: gltf.frag  texture.vert  texture_2d.frag  texture_rectangle.frag
MainApplication/src/: LoggerMainApplication.cpp  MainWindow.cpp  OpenGlWidget.cpp  main.cpp
MainApplication/ui/: MainWindow.ui
Rendering/: CMakeLists.txt
Rendering/include/Rendering/: GltfRenderObject.h  Logging.h  RenderData.h  RenderObject.h  RenderObjectManager.h  Renderer.h  Rendering.h  TextureRenderObject.h  pch.h
Rendering/src/: GltfRenderObject.cpp  Logging.cpp  RenderData.cpp  RenderObject.cpp  RenderObjectManager.cpp  Renderer.cpp  Rendering.cpp  TextureRenderObject.cpp  dllmain.cpp  pch.cpp
